fixed wrap goods css

--- a/scss/blocks/goods.scss
+++ b/scss/blocks/goods.scss
@@ -24,6 +24,7 @@
 .goods__inner {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .goods__item {
